# blendtutor

./: .Rbuildignore  .gitignore  .roborev.toml  Cargo.toml  DESCRIPTION  LICENSE  NAMESPACE  README.md  _quarto.yml  jarl.toml  rproject.toml
.cargo/: mutants.toml
.config/: nextest.toml
.githooks/: pre-push
.github/workflows/: ci.yml  docs.yml  mutants.yml
R/: blendtutor.R  display.R  educator_tools.R  evaluation.R  file_operations.R  fireworks_integration.R  lesson_loader.R  package_discovery.R  state.R  utils.R  validators.R
_extensions/blendtutor/: _extension.yml  blendtutor.lua
crates/cli/: Cargo.toml
crates/cli/src/: main.rs  output.rs
crates/cli/src/commands/: build.rs  eval.rs  export_quarto.rs  init.rs  list.rs  mod.rs  new.rs  run.rs  validate.rs
crates/cli/src/snapshots/: blendtutor__output__tests__eval_human_matches_snapshot.snap  blendtutor__output__tests__list_human_matches_snapshot.snap  blendtutor__output__tests__validate_human_invalid_matches_snapshot.snap  blendtutor__output__tests__validate_human_matches_snapshot.snap
crates/cli/tests/: build.rs  cli.rs  cutover.rs  eval.rs  export_quarto.rs  hints_content.rs  init.rs  list.rs  new.rs  readme.rs  run.rs  validate.rs  write_less_code_python.rs  write_less_code_r.rs
crates/cli/tests/common/: mod.rs
crates/cli/tests/fixtures/runs/: add_two_numbers_correct.R  add_two_numbers_wrong.R
crates/core/: Cargo.toml
crates/core/assets/pyodide/: index.html  lesson-runner.js
crates/core/assets/shared/: codemirror.js  coi-serviceworker.js  decrypt-shell.html  feedback.js  lesson-runner-core.js  styles.css
crates/core/assets/webr/: coi-serviceworker.js  index.html  lesson-runner.js
crates/core/src/: course.rs  crypto.rs  eval.rs  grade.rs  lesson.rs  lib.rs  quarto_export.rs  run.rs  scaffold.rs
crates/core/src/llm/: feedback.rs  mod.rs  prompt.rs  provider.rs
crates/core/src/runner/: mod.rs  python.rs  r.rs  subprocess.rs
crates/core/src/scaffold/: README.md  blendtutor.toml  eval_lesson_hello.yaml  gitignore  lesson_hello.yaml
crates/core/src/site/: mod.rs  pyodide.rs  webr.rs
crates/core/tests/: eval.rs  grade.rs  llm.rs  runner.rs
crates/core/tests/fixtures/course_basic/: blendtutor.toml
crates/core/tests/fixtures/course_partial/: add_two.yaml  blendtutor.toml  broken.yaml  greet.yaml
crates/core/tests/fixtures/course_with_eval_report_0_67/: blendtutor.toml  eval-report.json
crates/core/tests/fixtures/course_without_eval_report/: add_two.yaml  blendtutor.toml
crates/core/tests/fixtures/eval_command/: demo_lesson.yaml  eval_demo_lesson.yaml
crates/core/tests/fixtures/evals/: eval_fireworks_vitals.yaml  eval_fireworks_vitals_bad_verdict.yaml
crates/core/tests/fixtures/lessons/: add_two_numbers.yaml  gotcha_lesson.yaml  missing_student_code.yaml
crates/core/tests/fixtures/python-course/: add.yaml  blendtutor.toml
crates/core/tests/fixtures/r-course/: add_two.yaml  blendtutor.toml  square.yaml
crates/core/tests/snapshots/: llm__build_prompt.snap
demo-book/: .gitignore  _quarto.yml  index.qmd  python-exercises.qmd  r-exercises.qmd
docs/adr/: 0001-workspace-layout.md  0002-git-hook-mechanism.md  0003-lesson-schema.md  0004-course-manifest-discovery.md  0005-runner-trait-and-subprocess-model.md  0006-llm-provider-via-rig-core.md  (+10 more)
man/: build_fireworks_request.Rd  build_lesson_index.Rd  call_fireworks_with_tools.Rd  check_feedback_correct.Rd  check_fields_present.Rd  collect_validation_results.Rd  create_lesson_code_file.Rd  create_lesson_package.Rd  define_fireworks_feedback_tool.Rd  display_feedback.Rd  display_lesson_content.Rd  display_lesson_header.Rd  display_lesson_table.Rd  display_retry_instructions.Rd  display_usage_instructions.Rd  empty_lessons_result.Rd  eval_template.Rd  evaluate_student_submission.Rd  evaluate_with_llm.Rd  extract_exercise_prompt.Rd  extract_text_fallback.Rd  extract_tool_call.Rd  find_lesson_packages.Rd  format_next_lessons.Rd  get_lesson_path.Rd  grapes-or-or-grapes.Rd  handle_lesson_completion.Rd  initialize_lesson_state.Rd  invalidate_lesson_cache.Rd  lesson_yaml_template.Rd  list_lessons.Rd  load_lesson.Rd  open_editor.Rd  parse_feedback_arguments.Rd  parse_fireworks_tool_response.Rd  perform_fireworks_request.Rd  print_package_summary.Rd  print_validation_report.Rd  read_lesson_descriptions.Rd  read_lesson_yaml.Rd  (+18 more)
quarto-fixture/: coi-double.qmd  coi-empty.qmd  coi-false.qmd  coi-python-only.qmd  coi-true.qmd  coi-yaml.qmd  coi-yes.qmd  feedback.qmd  filter-invalid-lang.qmd  filter-missing-lang.qmd  filter.qmd  minimal.qmd  mixed-lang.qmd  pyodide.qmd  r-only.qmd  ux.qmd  webr.qmd
rodney-probes/: cm6-integration.js  cm6-ux.js  exercise-ux.js  feedback-probe.js  pyodide-adapter.js
scripts/: check-docs.sh  check-model-alignment.sh  check-mutants-ci.sh  check-mutants-diff.sh  check-mutants-scope.sh  eval-course.sh  install-hooks.sh  sync-quarto-assets.sh
tests/: testthat.R
(+130 files in other folders)
