[workspace]
resolver = "3"
members = ["crates/core", "crates/cli"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/mcmullarkey/blendtutor"

[workspace.dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
assert_cmd = "2"
predicates = "3"
