[package]
name = "blendtutor-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "blendtutor"
path = "src/main.rs"

[dependencies]
blendtutor-core = { path = "../core" }
clap = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
