[package]
name = "blendtutor-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "blendtutor"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
blendtutor-core = { path = "../core" }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
tempfile = { workspace = true }
