[package]
name = "blendtutor-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
command-group = { workspace = true }
serde = { workspace = true }
serde-saphyr = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }
